overflow fix

--- a/app/components/About.module.scss
+++ b/app/components/About.module.scss
@@ -21,7 +21,7 @@
 }
 
 .aboutContent {
-    padding-block: 3rem;
+    padding-top: 3rem;
 
     h2 {
         span {
@@ -31,7 +31,7 @@
 }
 
 .certifications {
-    padding-inline: 1rem;
+    padding: 3rem 1rem 0;
 }
 
 .h3 {
