--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@ body {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 *, *::before, *::after {
